maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:35: error: not found: value getmondeHauteur
  while(sommeCase!=getmondeHauteur()*getMondeLargeur()){
                   ^